style-navbar.css
header {
  height: 5%;
  background-color: var(--charcoal);
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  padding-right: 1em;
}

#nav-menu {
  display: none;
  flex-direction: column;
  width: 100vw;
  background-color: var(--charcoal);
  gap: 1em;
}

#nav-menu.open {
  position: absolute;
  top: 5%;
  width: 100%;
  display: flex;
  z-index: 2;
  border-bottom-left-radius: 2em;
  border-bottom-right-radius: 7em;
  border-bottom: 2px solid var(--blue-violet);
  padding: 1em;
}

#menu-button {
  width: 30px;
  z-index: 2;
  grid-column: 3 / 3;
  grid-row: 1;
  align-self: flex-end;
  justify-self: flex-end;
}

#hamburger {
  cursor: pointer;
  grid-column: 3/3;
  grid-row: 1;
  align-self: center;
  justify-self: flex-end;
}

header > form {
  display: flex;
  height:50%;
  align-self: center;
  padding-left: 1em;
}

@media (width >= 640px) {
  header {
    display: flex;
    gap: 3em;
  }

  header > img {
    background-color: var(--charcoal);
  }

  #nav-menu {
    grid-column: 2 / 4;
    display: flex;
    flex-direction: row;
    height: 100%;
    align-items: center;
    justify-self: flex-end;
  }

  #nav-menu > a {
    text-decoration: none;
  }

  #nav-menu > a:hover {
    padding-bottom: .3em;
    border-bottom: solid 2px var(--blue-violet);
    transition: .2s;
  }

  #hamburger {
    display: none;
  }
}

